// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextSection should render 1`] = `
<WithStyles(TextSection)>
  <TextSection
    classes={
      Object {
        "heroBtn": "TextSection-heroBtn-4",
        "innerContainer": "TextSection-innerContainer-2",
        "invertedBtn": "TextSection-invertedBtn-5",
        "invertedBtnDark": "TextSection-invertedBtnDark-6",
        "section": "TextSection-section-1",
        "sectionText": "TextSection-sectionText-3",
        "white": "TextSection-white-7",
      }
    }
  >
    <div
      className="TextSection-section-1"
      style={
        Object {
          "backgroundColor": undefined,
          "borderBottom": "2px solid undefined",
          "borderTop": "2px solid undefined",
          "padding": undefined,
        }
      }
    >
      <div
        className="TextSection-innerContainer-2"
      >
        <WithStyles(Typography)
          gutterBottom={true}
          style={
            Object {
              "color": undefined,
            }
          }
          variant="display2"
        >
          <Typography
            align="inherit"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter-21",
                "alignJustify": "MuiTypography-alignJustify-23",
                "alignLeft": "MuiTypography-alignLeft-20",
                "alignRight": "MuiTypography-alignRight-22",
                "body1": "MuiTypography-body1-17",
                "body2": "MuiTypography-body2-16",
                "button": "MuiTypography-button-19",
                "caption": "MuiTypography-caption-18",
                "colorError": "MuiTypography-colorError-31",
                "colorInherit": "MuiTypography-colorInherit-27",
                "colorPrimary": "MuiTypography-colorPrimary-28",
                "colorSecondary": "MuiTypography-colorSecondary-29",
                "colorTextSecondary": "MuiTypography-colorTextSecondary-30",
                "display1": "MuiTypography-display1-12",
                "display2": "MuiTypography-display2-11",
                "display3": "MuiTypography-display3-10",
                "display4": "MuiTypography-display4-9",
                "gutterBottom": "MuiTypography-gutterBottom-25",
                "headline": "MuiTypography-headline-13",
                "noWrap": "MuiTypography-noWrap-24",
                "paragraph": "MuiTypography-paragraph-26",
                "root": "MuiTypography-root-8",
                "subheading": "MuiTypography-subheading-15",
                "title": "MuiTypography-title-14",
              }
            }
            color="default"
            gutterBottom={true}
            headlineMapping={
              Object {
                "body1": "p",
                "body2": "aside",
                "display1": "h1",
                "display2": "h1",
                "display3": "h1",
                "display4": "h1",
                "headline": "h1",
                "subheading": "h3",
                "title": "h2",
              }
            }
            noWrap={false}
            paragraph={false}
            style={
              Object {
                "color": undefined,
              }
            }
            variant="display2"
          >
            <h1
              className="MuiTypography-root-8 MuiTypography-display2-11 MuiTypography-gutterBottom-25"
              style={
                Object {
                  "color": undefined,
                }
              }
            />
          </Typography>
        </WithStyles(Typography)>
        <WithStyles(Typography)
          className="TextSection-sectionText-3"
          gutterBottom={true}
          style={
            Object {
              "color": undefined,
            }
          }
          variant="body1"
        >
          <Typography
            align="inherit"
            className="TextSection-sectionText-3"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter-21",
                "alignJustify": "MuiTypography-alignJustify-23",
                "alignLeft": "MuiTypography-alignLeft-20",
                "alignRight": "MuiTypography-alignRight-22",
                "body1": "MuiTypography-body1-17",
                "body2": "MuiTypography-body2-16",
                "button": "MuiTypography-button-19",
                "caption": "MuiTypography-caption-18",
                "colorError": "MuiTypography-colorError-31",
                "colorInherit": "MuiTypography-colorInherit-27",
                "colorPrimary": "MuiTypography-colorPrimary-28",
                "colorSecondary": "MuiTypography-colorSecondary-29",
                "colorTextSecondary": "MuiTypography-colorTextSecondary-30",
                "display1": "MuiTypography-display1-12",
                "display2": "MuiTypography-display2-11",
                "display3": "MuiTypography-display3-10",
                "display4": "MuiTypography-display4-9",
                "gutterBottom": "MuiTypography-gutterBottom-25",
                "headline": "MuiTypography-headline-13",
                "noWrap": "MuiTypography-noWrap-24",
                "paragraph": "MuiTypography-paragraph-26",
                "root": "MuiTypography-root-8",
                "subheading": "MuiTypography-subheading-15",
                "title": "MuiTypography-title-14",
              }
            }
            color="default"
            gutterBottom={true}
            headlineMapping={
              Object {
                "body1": "p",
                "body2": "aside",
                "display1": "h1",
                "display2": "h1",
                "display3": "h1",
                "display4": "h1",
                "headline": "h1",
                "subheading": "h3",
                "title": "h2",
              }
            }
            noWrap={false}
            paragraph={false}
            style={
              Object {
                "color": undefined,
              }
            }
            variant="body1"
          >
            <p
              className="MuiTypography-root-8 MuiTypography-body1-17 MuiTypography-gutterBottom-25 TextSection-sectionText-3"
              style={
                Object {
                  "color": undefined,
                }
              }
            />
          </Typography>
        </WithStyles(Typography)>
      </div>
    </div>
  </TextSection>
</WithStyles(TextSection)>
`;

exports[`TextSection should render a title when passed in 1`] = `
<WithStyles(TextSection)
  sectionTitle="Test Title"
>
  <TextSection
    classes={
      Object {
        "heroBtn": "TextSection-heroBtn-4",
        "innerContainer": "TextSection-innerContainer-2",
        "invertedBtn": "TextSection-invertedBtn-5",
        "invertedBtnDark": "TextSection-invertedBtnDark-6",
        "section": "TextSection-section-1",
        "sectionText": "TextSection-sectionText-3",
        "white": "TextSection-white-7",
      }
    }
    sectionTitle="Test Title"
  >
    <div
      className="TextSection-section-1"
      style={
        Object {
          "backgroundColor": undefined,
          "borderBottom": "2px solid undefined",
          "borderTop": "2px solid undefined",
          "padding": undefined,
        }
      }
    >
      <div
        className="TextSection-innerContainer-2"
      >
        <WithStyles(Typography)
          gutterBottom={true}
          style={
            Object {
              "color": undefined,
            }
          }
          variant="display2"
        >
          <Typography
            align="inherit"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter-21",
                "alignJustify": "MuiTypography-alignJustify-23",
                "alignLeft": "MuiTypography-alignLeft-20",
                "alignRight": "MuiTypography-alignRight-22",
                "body1": "MuiTypography-body1-17",
                "body2": "MuiTypography-body2-16",
                "button": "MuiTypography-button-19",
                "caption": "MuiTypography-caption-18",
                "colorError": "MuiTypography-colorError-31",
                "colorInherit": "MuiTypography-colorInherit-27",
                "colorPrimary": "MuiTypography-colorPrimary-28",
                "colorSecondary": "MuiTypography-colorSecondary-29",
                "colorTextSecondary": "MuiTypography-colorTextSecondary-30",
                "display1": "MuiTypography-display1-12",
                "display2": "MuiTypography-display2-11",
                "display3": "MuiTypography-display3-10",
                "display4": "MuiTypography-display4-9",
                "gutterBottom": "MuiTypography-gutterBottom-25",
                "headline": "MuiTypography-headline-13",
                "noWrap": "MuiTypography-noWrap-24",
                "paragraph": "MuiTypography-paragraph-26",
                "root": "MuiTypography-root-8",
                "subheading": "MuiTypography-subheading-15",
                "title": "MuiTypography-title-14",
              }
            }
            color="default"
            gutterBottom={true}
            headlineMapping={
              Object {
                "body1": "p",
                "body2": "aside",
                "display1": "h1",
                "display2": "h1",
                "display3": "h1",
                "display4": "h1",
                "headline": "h1",
                "subheading": "h3",
                "title": "h2",
              }
            }
            noWrap={false}
            paragraph={false}
            style={
              Object {
                "color": undefined,
              }
            }
            variant="display2"
          >
            <h1
              className="MuiTypography-root-8 MuiTypography-display2-11 MuiTypography-gutterBottom-25"
              style={
                Object {
                  "color": undefined,
                }
              }
            >
              Test Title
            </h1>
          </Typography>
        </WithStyles(Typography)>
        <WithStyles(Typography)
          className="TextSection-sectionText-3"
          gutterBottom={true}
          style={
            Object {
              "color": undefined,
            }
          }
          variant="body1"
        >
          <Typography
            align="inherit"
            className="TextSection-sectionText-3"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter-21",
                "alignJustify": "MuiTypography-alignJustify-23",
                "alignLeft": "MuiTypography-alignLeft-20",
                "alignRight": "MuiTypography-alignRight-22",
                "body1": "MuiTypography-body1-17",
                "body2": "MuiTypography-body2-16",
                "button": "MuiTypography-button-19",
                "caption": "MuiTypography-caption-18",
                "colorError": "MuiTypography-colorError-31",
                "colorInherit": "MuiTypography-colorInherit-27",
                "colorPrimary": "MuiTypography-colorPrimary-28",
                "colorSecondary": "MuiTypography-colorSecondary-29",
                "colorTextSecondary": "MuiTypography-colorTextSecondary-30",
                "display1": "MuiTypography-display1-12",
                "display2": "MuiTypography-display2-11",
                "display3": "MuiTypography-display3-10",
                "display4": "MuiTypography-display4-9",
                "gutterBottom": "MuiTypography-gutterBottom-25",
                "headline": "MuiTypography-headline-13",
                "noWrap": "MuiTypography-noWrap-24",
                "paragraph": "MuiTypography-paragraph-26",
                "root": "MuiTypography-root-8",
                "subheading": "MuiTypography-subheading-15",
                "title": "MuiTypography-title-14",
              }
            }
            color="default"
            gutterBottom={true}
            headlineMapping={
              Object {
                "body1": "p",
                "body2": "aside",
                "display1": "h1",
                "display2": "h1",
                "display3": "h1",
                "display4": "h1",
                "headline": "h1",
                "subheading": "h3",
                "title": "h2",
              }
            }
            noWrap={false}
            paragraph={false}
            style={
              Object {
                "color": undefined,
              }
            }
            variant="body1"
          >
            <p
              className="MuiTypography-root-8 MuiTypography-body1-17 MuiTypography-gutterBottom-25 TextSection-sectionText-3"
              style={
                Object {
                  "color": undefined,
                }
              }
            />
          </Typography>
        </WithStyles(Typography)>
      </div>
    </div>
  </TextSection>
</WithStyles(TextSection)>
`;

exports[`TextSection should render a title when passed in 2`] = `
<WithStyles(TextSection)
  textColor="#000"
>
  <TextSection
    classes={
      Object {
        "heroBtn": "TextSection-heroBtn-4",
        "innerContainer": "TextSection-innerContainer-2",
        "invertedBtn": "TextSection-invertedBtn-5",
        "invertedBtnDark": "TextSection-invertedBtnDark-6",
        "section": "TextSection-section-1",
        "sectionText": "TextSection-sectionText-3",
        "white": "TextSection-white-7",
      }
    }
    textColor="#000"
  >
    <div
      className="TextSection-section-1"
      style={
        Object {
          "backgroundColor": undefined,
          "borderBottom": "2px solid undefined",
          "borderTop": "2px solid undefined",
          "padding": undefined,
        }
      }
    >
      <div
        className="TextSection-innerContainer-2"
      >
        <WithStyles(Typography)
          gutterBottom={true}
          style={
            Object {
              "color": "#000",
            }
          }
          variant="display2"
        >
          <Typography
            align="inherit"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter-21",
                "alignJustify": "MuiTypography-alignJustify-23",
                "alignLeft": "MuiTypography-alignLeft-20",
                "alignRight": "MuiTypography-alignRight-22",
                "body1": "MuiTypography-body1-17",
                "body2": "MuiTypography-body2-16",
                "button": "MuiTypography-button-19",
                "caption": "MuiTypography-caption-18",
                "colorError": "MuiTypography-colorError-31",
                "colorInherit": "MuiTypography-colorInherit-27",
                "colorPrimary": "MuiTypography-colorPrimary-28",
                "colorSecondary": "MuiTypography-colorSecondary-29",
                "colorTextSecondary": "MuiTypography-colorTextSecondary-30",
                "display1": "MuiTypography-display1-12",
                "display2": "MuiTypography-display2-11",
                "display3": "MuiTypography-display3-10",
                "display4": "MuiTypography-display4-9",
                "gutterBottom": "MuiTypography-gutterBottom-25",
                "headline": "MuiTypography-headline-13",
                "noWrap": "MuiTypography-noWrap-24",
                "paragraph": "MuiTypography-paragraph-26",
                "root": "MuiTypography-root-8",
                "subheading": "MuiTypography-subheading-15",
                "title": "MuiTypography-title-14",
              }
            }
            color="default"
            gutterBottom={true}
            headlineMapping={
              Object {
                "body1": "p",
                "body2": "aside",
                "display1": "h1",
                "display2": "h1",
                "display3": "h1",
                "display4": "h1",
                "headline": "h1",
                "subheading": "h3",
                "title": "h2",
              }
            }
            noWrap={false}
            paragraph={false}
            style={
              Object {
                "color": "#000",
              }
            }
            variant="display2"
          >
            <h1
              className="MuiTypography-root-8 MuiTypography-display2-11 MuiTypography-gutterBottom-25"
              style={
                Object {
                  "color": "#000",
                }
              }
            />
          </Typography>
        </WithStyles(Typography)>
        <WithStyles(Typography)
          className="TextSection-sectionText-3"
          gutterBottom={true}
          style={
            Object {
              "color": "#000",
            }
          }
          variant="body1"
        >
          <Typography
            align="inherit"
            className="TextSection-sectionText-3"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter-21",
                "alignJustify": "MuiTypography-alignJustify-23",
                "alignLeft": "MuiTypography-alignLeft-20",
                "alignRight": "MuiTypography-alignRight-22",
                "body1": "MuiTypography-body1-17",
                "body2": "MuiTypography-body2-16",
                "button": "MuiTypography-button-19",
                "caption": "MuiTypography-caption-18",
                "colorError": "MuiTypography-colorError-31",
                "colorInherit": "MuiTypography-colorInherit-27",
                "colorPrimary": "MuiTypography-colorPrimary-28",
                "colorSecondary": "MuiTypography-colorSecondary-29",
                "colorTextSecondary": "MuiTypography-colorTextSecondary-30",
                "display1": "MuiTypography-display1-12",
                "display2": "MuiTypography-display2-11",
                "display3": "MuiTypography-display3-10",
                "display4": "MuiTypography-display4-9",
                "gutterBottom": "MuiTypography-gutterBottom-25",
                "headline": "MuiTypography-headline-13",
                "noWrap": "MuiTypography-noWrap-24",
                "paragraph": "MuiTypography-paragraph-26",
                "root": "MuiTypography-root-8",
                "subheading": "MuiTypography-subheading-15",
                "title": "MuiTypography-title-14",
              }
            }
            color="default"
            gutterBottom={true}
            headlineMapping={
              Object {
                "body1": "p",
                "body2": "aside",
                "display1": "h1",
                "display2": "h1",
                "display3": "h1",
                "display4": "h1",
                "headline": "h1",
                "subheading": "h3",
                "title": "h2",
              }
            }
            noWrap={false}
            paragraph={false}
            style={
              Object {
                "color": "#000",
              }
            }
            variant="body1"
          >
            <p
              className="MuiTypography-root-8 MuiTypography-body1-17 MuiTypography-gutterBottom-25 TextSection-sectionText-3"
              style={
                Object {
                  "color": "#000",
                }
              }
            />
          </Typography>
        </WithStyles(Typography)>
      </div>
    </div>
  </TextSection>
</WithStyles(TextSection)>
`;

exports[`TextSection should render text when passed in 1`] = `
<WithStyles(TextSection)
  text="Test text"
>
  <TextSection
    classes={
      Object {
        "heroBtn": "TextSection-heroBtn-4",
        "innerContainer": "TextSection-innerContainer-2",
        "invertedBtn": "TextSection-invertedBtn-5",
        "invertedBtnDark": "TextSection-invertedBtnDark-6",
        "section": "TextSection-section-1",
        "sectionText": "TextSection-sectionText-3",
        "white": "TextSection-white-7",
      }
    }
    text="Test text"
  >
    <div
      className="TextSection-section-1"
      style={
        Object {
          "backgroundColor": undefined,
          "borderBottom": "2px solid undefined",
          "borderTop": "2px solid undefined",
          "padding": undefined,
        }
      }
    >
      <div
        className="TextSection-innerContainer-2"
      >
        <WithStyles(Typography)
          gutterBottom={true}
          style={
            Object {
              "color": undefined,
            }
          }
          variant="display2"
        >
          <Typography
            align="inherit"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter-21",
                "alignJustify": "MuiTypography-alignJustify-23",
                "alignLeft": "MuiTypography-alignLeft-20",
                "alignRight": "MuiTypography-alignRight-22",
                "body1": "MuiTypography-body1-17",
                "body2": "MuiTypography-body2-16",
                "button": "MuiTypography-button-19",
                "caption": "MuiTypography-caption-18",
                "colorError": "MuiTypography-colorError-31",
                "colorInherit": "MuiTypography-colorInherit-27",
                "colorPrimary": "MuiTypography-colorPrimary-28",
                "colorSecondary": "MuiTypography-colorSecondary-29",
                "colorTextSecondary": "MuiTypography-colorTextSecondary-30",
                "display1": "MuiTypography-display1-12",
                "display2": "MuiTypography-display2-11",
                "display3": "MuiTypography-display3-10",
                "display4": "MuiTypography-display4-9",
                "gutterBottom": "MuiTypography-gutterBottom-25",
                "headline": "MuiTypography-headline-13",
                "noWrap": "MuiTypography-noWrap-24",
                "paragraph": "MuiTypography-paragraph-26",
                "root": "MuiTypography-root-8",
                "subheading": "MuiTypography-subheading-15",
                "title": "MuiTypography-title-14",
              }
            }
            color="default"
            gutterBottom={true}
            headlineMapping={
              Object {
                "body1": "p",
                "body2": "aside",
                "display1": "h1",
                "display2": "h1",
                "display3": "h1",
                "display4": "h1",
                "headline": "h1",
                "subheading": "h3",
                "title": "h2",
              }
            }
            noWrap={false}
            paragraph={false}
            style={
              Object {
                "color": undefined,
              }
            }
            variant="display2"
          >
            <h1
              className="MuiTypography-root-8 MuiTypography-display2-11 MuiTypography-gutterBottom-25"
              style={
                Object {
                  "color": undefined,
                }
              }
            />
          </Typography>
        </WithStyles(Typography)>
        <WithStyles(Typography)
          className="TextSection-sectionText-3"
          gutterBottom={true}
          style={
            Object {
              "color": undefined,
            }
          }
          variant="body1"
        >
          <Typography
            align="inherit"
            className="TextSection-sectionText-3"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter-21",
                "alignJustify": "MuiTypography-alignJustify-23",
                "alignLeft": "MuiTypography-alignLeft-20",
                "alignRight": "MuiTypography-alignRight-22",
                "body1": "MuiTypography-body1-17",
                "body2": "MuiTypography-body2-16",
                "button": "MuiTypography-button-19",
                "caption": "MuiTypography-caption-18",
                "colorError": "MuiTypography-colorError-31",
                "colorInherit": "MuiTypography-colorInherit-27",
                "colorPrimary": "MuiTypography-colorPrimary-28",
                "colorSecondary": "MuiTypography-colorSecondary-29",
                "colorTextSecondary": "MuiTypography-colorTextSecondary-30",
                "display1": "MuiTypography-display1-12",
                "display2": "MuiTypography-display2-11",
                "display3": "MuiTypography-display3-10",
                "display4": "MuiTypography-display4-9",
                "gutterBottom": "MuiTypography-gutterBottom-25",
                "headline": "MuiTypography-headline-13",
                "noWrap": "MuiTypography-noWrap-24",
                "paragraph": "MuiTypography-paragraph-26",
                "root": "MuiTypography-root-8",
                "subheading": "MuiTypography-subheading-15",
                "title": "MuiTypography-title-14",
              }
            }
            color="default"
            gutterBottom={true}
            headlineMapping={
              Object {
                "body1": "p",
                "body2": "aside",
                "display1": "h1",
                "display2": "h1",
                "display3": "h1",
                "display4": "h1",
                "headline": "h1",
                "subheading": "h3",
                "title": "h2",
              }
            }
            noWrap={false}
            paragraph={false}
            style={
              Object {
                "color": undefined,
              }
            }
            variant="body1"
          >
            <p
              className="MuiTypography-root-8 MuiTypography-body1-17 MuiTypography-gutterBottom-25 TextSection-sectionText-3"
              style={
                Object {
                  "color": undefined,
                }
              }
            >
              Test text
            </p>
          </Typography>
        </WithStyles(Typography)>
      </div>
    </div>
  </TextSection>
</WithStyles(TextSection)>
`;
